[package]
name = "lordserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.15.0"
tokio = {version = "1.12.0", features = ["full", "sync"]}
env_logger = "0.9.0"
log = "0.4.14"
futures-util = "0.3.7"
lordserial = {path = "../lordserial"}
serialport="4.0.0"
futures-core="0.3.0"
tokio-stream={version = "0.1.7", features = ["sync"]}
futures = "0.1.25"
futures-channel = "0.3.17"
